--- a/style/CenterHero.css
+++ b/style/CenterHero.css
@@ -1,187 +1,32 @@
-.info.center {
-    text-align: center;
-    width: 90%;
-    padding: 60px 0;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    position: relative;
-    align-items: center;
+.info.center{text-align:center;width:90%;padding:60px 0;display:flex;flex-direction:column;justify-content:center;position:relative;align-items:center}
+.info.center img{z-index:-1}
+.info.center p{width:auto;position:relative}
+.info.center p:first-child{position:relative;padding:0rem 72px;font-size:24px;font-weight:500}
+.info.center p:first-child::before{content:'';width:60px;position:absolute;height:2px;top:50%;left:0;transform:translateY(50%);background-color:var(--p-color)}
+.info.center p:first-child::after{content:'';width:61px;position:absolute;height:2px;top:50%;right:0;transform:translateY(50%);background-color:var(--p-color)}
+.info.center p:not(:first-child){font-size:20px;padding:0;width:80%;line-height:1.5;margin:0;position:relative;color:var(--text-s-color)}
+.info.center h1{font-size:88px;display:flex;flex-direction:row;justify-content:center;flex-wrap:wrap;position:relative}
+.info.center p:last-child{position:relative}
+.info.center h1 span{position:relative;padding:0 1rem}
+.info.center h1 span svg{position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);z-index:-1}
+.info.center img[alt=Highlight]{position:absolute;top:50%;right:-10%;transform:translateY(-50%)}
+.info.center img[alt=hero1]{position:absolute;top:12%;left:7%;width:31px}
+.info.center img[alt=hero3]{position:absolute;bottom:8%;right:26%}
+.info.center img[alt=hero2]{position:absolute;top:73%;left:6%;width:32px}
+@media (max-width:768px){
+.info.center{padding:1rem 0;align-items:center}
+.info.center img[alt=hero1]{position:absolute;top:87px;left:20%;width:31px}
+.info.center h1{width:auto;font-size:12vw}
+.info.center img[alt=Highlight]{width:70px;top:-21px}
 }
-
-.info.center img {
-    z-index: -1;
-}
-
-.info.center p {
-    width: auto;
-    position: relative;
-}
-
-.info.center p:first-child {
-    position: relative;
-    padding: 0rem 72px;
-    font-size: 24px;
-    font-weight: 500;
-}
-
-.info.center p:first-child::before {
-    content: '';
-    width: 60px;
-    position: absolute;
-    height: 2px;
-    top: 50%;
-    left: 0;
-    transform: translateY(50%);
-    background-color: var(--p-color);
-}
-
-.info.center p:first-child::after {
-    content: '';
-    width: 61px;
-    position: absolute;
-    height: 2px;
-    top: 50%;
-    right: 0;
-    transform: translateY(50%);
-    background-color: var(--p-color);
-}
-
-.info.center p:not(:first-child) {
-    font-size: 20px;
-    padding: 0;
-    width: 80%;
-    line-height: 1.5;
-    margin: 0;
-    position: relative;
-    color: var(--text-s-color);
-}
-
-.info.center h1 {
-    font-size: 88px;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    flex-wrap: wrap;
-    position: relative;
-}
-
-.info.center p:last-child {
-    position: relative;
-}
-
-.info.center h1 span {
-    position: relative;
-    padding: 0 1rem;
-}
-
-.info.center h1 span svg {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    z-index: -1;
-}
-
-.info.center img[alt="Highlight"] {
-    position: absolute;
-    top: 50%;
-    right: -10%;
-    transform: translateY(-50%);
-}
-
-.info.center img[alt="hero1"] {
-    position: absolute;
-    top: 12%;
-    left: 7%;
-    width: 31px;
-}
-
-.info.center img[alt="hero3"] {
-    position: absolute;
-    bottom: 8%;
-    right: 26%;
-}
-
-.info.center img[alt="hero2"] {
-    position: absolute;
-    top: 73%;
-    left: 6%;
-    width: 32px;
-}
-
-
-
-
-
-
-@media (max-width: 768px) {
-
-    .info.center {
-        text-align: center;
-        width: 90%;
-        padding: 1rem 0;
-        align-items: center;
-    }
-
-
-    .info.center img[alt="hero1"] {
-        position: absolute;
-        top: 87px;
-        left: 20%;
-        width: 31px;
-    }
-
-    .info.center h1 {
-        width: auto;
-        font-size: 12vw;
-    }
-
-    .info.center img[alt="Highlight"] {
-        width: 70px;
-        top:-21px;
-    }
-}
-
-@media (max-width:400px) {
-    .info.center h1 {
-        width: auto;
-    }
-
-    .info.center p:first-child {
-        position: relative;
-        padding: 0rem 3rem;
-        font-size: 4.5vw;
-    }
-
-    .info.center p:first-child::after {
-        width: 38px;
-    }
-
-    .info.center p:first-child::before {
-        width: 38px;
-    }
-
-    .info.center h1 span img[alt="Circle"] {
-        width: 46vw;
-    }
-
-    .info.center img[alt="Highlight"] {
-        width: 40px;
-    }
-
-    .info.center p:not(:first-child) {
-        font-size: 4vw;
-    }
-
-    .info.center img[alt="hero1"] {
-        top: 57px;
-        left: 11%;
-        width: 7vw;
-    }
-
-    .info.center img[alt="hero3"] {
-        width: 13vw;
-    }
-
+@media (max-width:400px){
+.info.center h1{width:auto}
+.info.center p:first-child{position:relative;padding:0rem 3rem;font-size:4.5vw}
+.info.center p:first-child::after{width:38px}
+.info.center p:first-child::before{width:38px}
+.info.center h1 span img[alt=Circle]{width:46vw}
+.info.center img[alt=Highlight]{width:40px;top:152px;right:0}
+.info.center p:not(:first-child){font-size:4vw}
+.info.center img[alt=hero1]{top:57px;left:11%;width:7vw}
+.info.center img[alt=hero3]{width:13vw}
 }
