--- a/style/ContactComp.css
+++ b/style/ContactComp.css
@@ -1,57 +1,12 @@
-.Contact-Home{
-    margin: 2rem 0;
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    background-color: #F0FDF7;
-    -o-border-radius: 50px;
-    gap: 60px;
-    -webkit-border-radius: 50px;
-    -moz-border-radius: 50px;
-    -ms-border-radius: 50px;
-    border-radius: 50px;
-    padding: 0;
+.Contact-Home{margin:2rem 0;display:flex;flex-direction:row;justify-content:flex-start;background-color:#f0fdf7;border-radius:50px;gap:60px;padding:0}
+@media (max-width:1111px){
+.Contact-Home .info h1{font-size:47px;margin:0}
 }
-
-@media (max-width: 1111px) {
-
-    .Contact-Home .info h1 {
-        font-size: 47px;
-    margin: 0;
-}}
-
-@media (max-width: 768px) {
-    .Contact-Home img{
-        width: 100%;
-    }
-    
-    .Contact-Home .info {
-        padding: 2rem;
-        width: 100%;
-    }
-    .Contact-Home .info h1{
-        font-size: 57px;
-        margin: 0;
-    }
-    .Contact-Home .buttons a{
-        color: white;
-        background-color: var(--p-color);
-        display: flex;
-        align-items: baseline;
-        gap: 10px;
-        border-radius: 24px;
-        padding: 12px 22px;
-        border: none;
-    }
-    .Contact-Home .buttons {
-        margin: 1rem 0;
-        display: flex;
-        flex-direction: row;
-        gap: 1rem;
-        align-items: center;
-        text-wrap: nowrap;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-    }
-    
+@media (max-width:768px){
+.Contact-Home{flex-direction:column}
+.Contact-Home img{padding:40px 24px;width:calc(100% - 48px);height:auto;position:relative;top:13px;left:-99px}
+.Contact-Home .info{padding:40px 24px;width:calc(100% - 48px)}
+.Contact-Home .info h1{font-size:36px}
+.Contact-Home .buttons a{color:#fff;background-color:var(--p-color);display:flex;align-items:baseline;gap:10px;border-radius:24px;padding:12px 22px;border:none}
+.Contact-Home .buttons{margin:1rem 0;display:flex;flex-direction:row;gap:1rem;align-items:center;flex-wrap:wrap;justify-content:flex-start}
 }
