--- a/style/CustomButton.css
+++ b/style/CustomButton.css
@@ -1,85 +1,10 @@
-.buttons {
-    margin: 1rem 0;
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    align-items: center;
-    text-wrap: nowrap;
-    flex-wrap: wrap;
-}
-.buttons.center{
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    text-wrap: nowrap;
-}
-
-
-
-.fa-arrow-right:before {
-    content: "\f061";
-    font-size: smaller;
-}
-
-.buttons a {
-    color: black;
-    border: 1px solid black;
-    padding: 1rem 2rem;
-    border-radius: 2rem;
-}
-
-
-
-.buttons a:first-child {
-    color: white;
-    background-color: black;
-    border: 1px solid black;
-    padding: 1rem 2rem;
-    border-radius: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    gap: 12px;
-}
-
-.buttons a.green:first-child {
-    color: white;
-    background-color: var(--p-color);
-    border: 1px solid var(--p-color);
-    padding: 1rem 2rem;
-    -o-border-radius: 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    gap: 12px;
-    -webkit-border-radius: 2rem;
-    -moz-border-radius: 2rem;
-    -ms-border-radius: 2rem;
-    border-radius: 2rem;
-}
-
-.buttons a.none:first-child {
-    color: black;
-    background-color: transparent;
-    border: none;
-    padding: 1rem 2rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    gap: 12px;
-}
-@media (max-width: 768px) {
-
-.buttons {
-    margin: 1rem 0;
-    display: flex;
-    flex-direction: row;
-    gap: 1rem;
-    align-items: center;
-    text-wrap: nowrap;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-
+.buttons{margin:1rem 0;display:flex;flex-direction:row;gap:1rem;align-items:center;text-wrap:nowrap;flex-wrap:wrap}
+.buttons.center{width:100%;display:flex;justify-content:center;text-wrap:nowrap}
+.fa-arrow-right:before{content:"\f061";font-size:smaller}
+.buttons a{color:#000;border:1px solid #000;padding:1rem 2rem;border-radius:2rem}
+.buttons a:first-child{color:#fff;background-color:#000;border:1px solid #000;padding:1rem 2rem;border-radius:2rem;display:flex;justify-content:space-between;align-items:baseline;gap:12px}
+.buttons a.green:first-child{color:#fff;background-color:var(--p-color);border:1px solid var(--p-color);padding:1rem 2rem;-o-border-radius:2rem;display:flex;justify-content:space-between;align-items:baseline;gap:12px;-webkit-border-radius:2rem;-moz-border-radius:2rem;-ms-border-radius:2rem;border-radius:2rem}
+.buttons a.none:first-child{color:#000;background-color:transparent;border:none;padding:1rem 2rem;display:flex;justify-content:space-between;align-items:baseline;gap:12px}
+@media (max-width:768px){
+.buttons{justify-content:center;padding-top:40px;gap:7px;}
 }
