--- a/style/Footer.css
+++ b/style/Footer.css
@@ -1,194 +1,36 @@
-
-footer{
-    padding: 2rem;
-    color: white;
-    background-color: black;
-    width: 100%;
-    display: grid;
-    place-items: center;
-    overflow: hidden;
+footer{padding:2rem;color:#fff;background-color:#000;width:100%;display:grid;place-items:center;overflow:hidden}
+footer .container{width:81.25%;display:flex;flex-direction:column;justify-content:center;align-items:center;margin:0}
+footer .top{display:flex;padding-top:80px;padding-bottom:60px;gap:79px;color:#fff;border-bottom:1px solid #fff}
+footer .end{width:100%;text-align:center;padding-top:2rem}
+footer .top .info{display:flex;flex-direction:column;gap:1rem;width:369px}
+footer .top .info p{margin:0;padding:30px 0;color:#dcdcdc}
+footer .top .navBrand a{display:flex;flex-direction:row;align-items:center;padding:0}
+footer .top .navBrand a h1{margin:0;font-size:43px;color:#fff;padding:0}
+footer .top .navBrand a span{margin:0;padding:0;font-weight:300}
+footer .top .info p{font-size:14px}
+footer .social-links{display:flex;align-items:center;gap:20px}
+footer .social-links i{font-size:large}
+footer .links{display:flex;justify-content:space-evenly;gap:60px}
+footer .links .link{display:flex;flex-direction:column;gap:1rem}
+footer .links .link:first-child{padding-right:141px}
+footer .links .link:nth-child(2){padding-right:60px}
+footer .links .link h2{font-size:24px;margin:0}
+footer .links .link ul{color:#dcdcdc;display:flex;flex-direction:column;align-items:flex-start;padding-inline-start:0;gap:10px;padding:0;padding-top:20px;margin:0}
+footer .links .link ul li a{font-size:16px;color:#dcdcdc}
+footer .links .link ul:last-child li{display:flex;flex-direction:row;align-items:center;gap:10px;padding-bottom:20px;width:309}
+footer .links .link ul:nth-child(1) li{padding-bottom:8px}
+footer .links .link ul:nth-child(2) li{padding-bottom:10px}
+footer .links .link:last-child ul li p{margin:0}
+@media (max-width:768px){
+footer{padding:2rem;color:#fff;background-color:#000;display:grid;place-items:center;overflow:hidden;width:calc(100% - 4rem)}
+footer .top{flex-direction:column;align-items:center}
+footer .top .info .navBrand a h1{text-wrap:nowrap}
+footer .top .info{justify-content:center;align-items:center;width:100%}
+footer .top .info p{color:#fff;text-align:center}
+footer .links{display:flex;flex-direction:column;justify-content:center;align-items:center;width:100%}
+footer .links .link{text-align:center;padding-right:0}
+footer .links .link:first-child{padding:0}
+footer .links .link:nth-child(2){padding:0}
+footer .links .link ul{align-items:center;gap:1rem;text-wrap:pretty}
+footer .end{font-size:13px}
 }
-footer .container{
-    width: 81.25%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-}
-footer .top{
-    display: flex;
-    padding-top: 80px;
-    padding-bottom: 60px;
-    gap: 79px;
-    color: white;
-    border-bottom: 1px solid white;
-}
-footer .end{
-    width: 100%;
-    text-align: center;
-    padding-top: 2rem;
-
-}
-footer .top .info {
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-    width: 369px;
-}
-
-footer .top .info p{
-margin: 0;
-padding: 30px 0;
-color: #DCDCDC;
-}
-footer .top .navBrand a{
-   display: flex;
-   flex-direction: row;
-   align-items:center;
-   padding: 0;
-}
-
-footer .top .navBrand a h1 {
-    margin: 0;
-    font-size: 43px;
-    color: white;
-    padding: 0;
-}
-
-footer .top .navBrand a span {
-    margin: 0;
-    padding: 0;
-    font-weight: 300;
-}
-footer .top .info p{
-    font-size: 14px;
-}
-
-footer .social-links{
-    display: flex;
-    align-items:center;
-    gap:20px;
-}
-
-footer .social-links i{
-font-size: large;
-
-}
-footer .links{
-    display: flex;
-    justify-content: space-evenly;
-    gap: 60px;
-}
-
-footer .links .link{
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-}
-footer .links .link:first-child{
-padding-right: 141px;
-}
-footer .links .link:nth-child(2){
-    padding-right: 60px;
-    }
-
-
-footer .links .link h2{
-font-size: 24px;
-margin: 0;
-}
-footer .links .link ul{
-    color: #DCDCDC;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding-inline-start: 0;
-    gap: 10px;
-    padding: 0;
-    padding-top: 20px;
-    margin: 0;
-}
-
-footer .links .link ul li a{
-    font-size: 16px;
-    color: #DCDCDC;
-}
-
-footer .links .link ul:last-child li {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
-    padding-bottom: 20px;
-    width: 309;
-}
-
-footer .links .link ul:nth-child(1) li {
-    padding-bottom: 8px;
-}
-
-footer .links .link ul:nth-child(2) li {
-    padding-bottom: 10px;
-}
-footer .links .link:last-child ul li p{
-margin: 0;
-}
-
-@media (max-width: 768px) {
-    footer {
-        padding: 2rem;
-        color: white;
-        background-color: black;
-        width: auto;
-        display: grid;
-        place-items: center;
-        overflow: hidden;
-    }
-    footer .container{
-        flex-direction: column;
-        align-items: center;
-
-    }
-    footer .top{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    footer .top .info .navBrand a h1 {
-        text-wrap: nowrap;
-    }
-    footer .top .info {
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-    footer .top .info p {
-        color: white;
-        text-align: center;
-    }
-    footer .links {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        align-items: center;
-        width: 100%;
-    }
-
-    footer .links .link {
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        width: 33%;
-        text-align: center;
-    }
-
-    footer .links .link ul {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding-inline-start: 0;
-        gap: 1rem;
-        text-wrap: pretty;
-    }
-  }
