--- a/style/App.css
+++ b/style/App.css
@@ -9,7 +9,7 @@ ul{list-style:none}
 a{text-decoration:none;color:#000;text-wrap:nowrap}
 section{display:grid;place-items:center}
 section:not(:first-child){margin:4rem 0}
-.container{max-width:81.25%;display:grid;place-items:center}
+.container{max-width:1170px;display:grid;place-items:center}
 section:first-child{padding-top:5rem}
 @media (max-width:768px){
 .container{max-width:100%}
