--- a/style/Footer.css
+++ b/style/Footer.css
@@ -1,5 +1,5 @@
 footer{padding:2rem;color:#fff;background-color:#000;width:100%;display:grid;place-items:center;overflow:hidden}
-footer .container{width:81.25%;display:flex;flex-direction:column;justify-content:center;align-items:center;margin:0}
+footer .container{width:1170px;display:flex;flex-direction:column;justify-content:center;align-items:center;margin:0}
 footer .top{display:flex;padding-top:80px;padding-bottom:60px;gap:79px;color:#fff;border-bottom:1px solid #fff}
 footer .end{width:100%;text-align:center;padding-top:2rem}
 footer .top .info{display:flex;flex-direction:column;gap:1rem;width:369px}
