--- a/style/CustomButton.css
+++ b/style/CustomButton.css
@@ -6,5 +6,5 @@
 .buttons a.green:first-child{color:#fff;background-color:var(--p-color);border:1px solid var(--p-color);padding:1rem 2rem;-o-border-radius:2rem;display:flex;justify-content:space-between;align-items:baseline;gap:12px;-webkit-border-radius:2rem;-moz-border-radius:2rem;-ms-border-radius:2rem;border-radius:2rem}
 .buttons a.none:first-child{color:#000;background-color:transparent;border:none;padding:1rem 2rem;display:flex;justify-content:space-between;align-items:baseline;gap:12px}
 @media (max-width:768px){
-.buttons{justify-content:center;padding-top:40px;gap:7px;}
+.buttons{justify-content:center;padding-top:40px;gap:7px;margin:0}
 }
