--- a/style/Service.css
+++ b/style/Service.css
@@ -5,16 +5,23 @@
 .service-cards .card:nth-child(2){background-color:#cceddf}
 .service-cards .card:nth-child(3){background-color:#ccd3ed}
 .service-cards .card:nth-child(4){background-color:#e6cced}
-.service-cards .card img:first-child{padding:1rem;padding-bottom:2rem}
+.service-cards .card img:nth-child(1){padding:1rem;padding-bottom:2rem}
 .service-cards .card img:nth-child(2){position:absolute;width:62%;top:0;left:38%}
 .service-cards .card h1{font-size:45px;padding-left:1rem}
 .service-cards .card p{line-height:1.7rem;padding-left:1rem;color:var(--text-ss-color)}
 .service-cards .buttons a.none:first-child{padding:0;padding-top:2rem;padding-left:1rem}
 @media (max-width:768px){
-.service-cards{gap:20px;justify-content:center;}
-.service-cards .card{width:90%;height:70vh;align-items:center;border-radius:40px;overflow:hidden;text-align:center;padding:0}
-.service-cards .card img:first-child{width:100px;padding:1rem}
-.service-cards .card img:nth-child(2){position:absolute;width:62%;top:0;left:38%}
-.service-cards .card h1{font-size:45px;padding-left:1rem}
-.service-cards .card p{line-height:1.7rem;padding-left:1rem;color:var(--text-ss-color)}
+.service-cards{gap:20px;justify-content:center}
+.service-cards .card{width:calc(342px - 84px);height:auto;align-items:center;border-radius:40px;overflow:hidden;text-align:center;padding:40px}
+.service-cards .card:nth-child(1) img:nth-child(1){width:110px;height:84px;padding-top:82.87px;padding-bottom:83.13px}
+.service-cards .card:nth-child(2) img:nth-child(1){width:110.23px;height:110.23px;padding-top:82.87px;padding-bottom:83.13px}
+.service-cards .card:nth-child(3) img:nth-child(1){width:110px;height:110px;padding-top:82.87px;padding-bottom:83.13px}
+.service-cards .card:nth-child(4) img:nth-child(1){width:106.56px;height:101.67px;padding-top:82.87px;padding-bottom:83.13px}
+.service-cards .card:nth-child(1) img:nth-child(2){top:2px;left:92px;height:auto;width:auto}
+.service-cards .card:nth-child(2) img:nth-child(2){top:40px;left:12px;height:auto;width:auto}
+.service-cards .card:nth-child(3) img:nth-child(2){top:2px;left:12px;height:auto;width:auto}
+.service-cards .card:nth-child(4) img:nth-child(2){top:2px;left:0px;height:auto;width:auto}
+.service-cards .card h1{font-size:36px;padding-left:0}
+.service-cards .card p{padding-left:0;font-size:14px;color:#000;margin:0;padding-top:20px}
+.service-cards .buttons a.none:first-child{padding-left:0;font-size:24px;font-weight:600}
 }
