--- a/style/App.css
+++ b/style/App.css
@@ -14,3 +14,44 @@ section:first-child{padding-top:5rem}
 @media (max-width:768px){
 .container{width:100%}
 }
+
+.Blog-Home{display:flex;flex-direction:column;gap:50px;margin:2rem 0}
+.Blog-Home .top{display:flex;flex-direction:row;justify-content:space-between;align-items:center;flex-wrap:wrap;width:100%}
+.Blog-Home .top .info{width:60%}
+.Blog-Home .top .info h2{padding-bottom:0}
+.Blog-Home .top .buttons{width:auto;justify-content:flex-start}
+.Blog-Home .top .buttons a{padding:20px 44px}
+.Blog-Home .cards{display:flex;justify-content:space-between;align-items:stretch}
+.Blog-Home .cards .card{min-width:300px;display:flex;flex-direction:column;align-items:center;border-radius:50px;padding:2rem 1rem;flex:1 1 calc(30% - 2rem);flex-wrap:wrap}
+.Blog-Home .cards .card:nth-child(1) .img{background-color:#ddcced}
+.Blog-Home .Blog-p{display:flex;gap:10px;justify-content:flex-start;width:100%;align-items:center}
+.Blog-Home .cards .card:nth-child(2) .img{background-color:#edddcc}
+.Blog-Home .cards .card:nth-child(3) .img{background-color:#cceded}
+.Blog-Home .cards .card .img{border-radius:26px;display:grid;place-items:center;width:100%;min-height:300px;margin-bottom:32px}
+.Blog-Home .cards .card .Type{display:flex;gap:10px;align-items:center}
+.Blog-Home .cards .card h2{color:#000;margin:0;padding-top:20px;padding-bottom:14px;font-size:22px;text-wrap:wrap}
+.Blog-Home .cards .card p{color:#606060;line-height:1.6;font-weight:400;margin:0;font-size:14px;text-wrap:pretty;padding-right:1px}
+.Blog-Home .cards .card p a{color:#000;font-weight:700;text-wrap:nowrap;cursor:pointer}
+.Blog-Home .cards .card .Blog-p p:first-child{color:#fff;background-color:var(--p-color);display:flex;align-items:baseline;gap:10px;border-radius:24px;padding:12px 22px;border:none;margin:0}
+.Blog-Home .cards .card .Blog-p p:last-child{color:var(--text-s-color);margin:0}
+
+@media (max-width:1111px){
+    .Blog-Home .cards{display:flex;justify-content:center;align-items:stretch;flex-wrap:wrap}
+    .Blog-Home .cards .card{text-align:center}
+    .Blog-Home .cards .card p{color:var(--text-ss-color);padding:0 1rem}
+    .Blog-Home .top .info{display:flex;flex-direction:column;justify-content:space-between;width:90%}
+ 
+    }
+    @media (max-width:768px){
+    .Blog-Home .cards{display:flex;justify-content:center;align-items:baseline;flex-wrap:wrap}
+    .Blog-Home .cards .card .img{width:100%;padding:2rem 0}
+    .Blog-Home .top{display:flex;flex-direction:column;justify-content:space-between;align-items:flex-start}
+    .Blog-Home .cards .card h2{color:#000;margin:0;padding-top:20px;padding-bottom:14px;font-size:24px;font-weight:600;text-wrap:wrap}
+    .Blog-Home .top .info{width:calc(100% - 48px);padding:0 24px}
+    .Blog-Home .top .info h2 {
+        padding-bottom: 32px;
+    }
+    .Blog-Home .top .buttons{width:calc(100% - 48px);padding:0 24px;margin:0;gap:9.66px}
+    .Blog-Home .top .buttons a{padding:10px 20px;font-size:12px;}
+    .Blog-Home .Blog-p{justify-content:center}
+    }
