finish all issues

--- a/style/Blog.css
+++ b/style/Blog.css
@@ -11,7 +11,9 @@
 .blog-cards .card .content-card .first p:nth-child(2){color:var(--text-ss-color)}
 .blog-cards .card .content-card h1{font-size:40px}
 .blog-cards .card .content-card p{color:var(--text-ss-color);line-height:1.5}
-.Blog-Home .top .buttons{width:auto;margin:1rem;display:flex;flex-direction:row;gap:1rem;justify-content:flex-start;align-items:center;text-wrap:nowrap;flex-wrap:wrap}
+.blog-page .Blog-Home .top .buttons{width:auto;margin:1rem;display:flex;flex-direction:row;gap:1rem;justify-content:flex-start;align-items:center;text-wrap:nowrap;flex-wrap:wrap}
+.blog-page .Blog-Home .top .info{width:auto}
+.blog-page .Blog-Home .top .info h2{padding:0}
 @media (max-width:768px){
 .blog-cards{gap:30px;padding:0 24px}
 .blog-cards .card{width:100%;text-align:center;align-items:center;gap:30px;padding:20px;padding-bottom:60px}
