--- a/style/ContactComp.css
+++ b/style/ContactComp.css
@@ -1,4 +1,5 @@
 .Contact-Home{margin:2rem 0;display:flex;flex-direction:row;justify-content:flex-start;background-color:#f0fdf7;border-radius:50px;gap:60px;padding:0}
+.Contact-Home .info h1{padding-right:2px}
 @media (max-width:1111px){
 .Contact-Home .info h1{font-size:47px;margin:0}
 }
